<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/origen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarOrigen"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtOrigen"
            android:layout_weight="1" />

        <TextView
            android:text="@string/destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarDestino"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDestino"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/fumador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarFumador"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtFumador"
            android:layout_weight="1" />

        <TextView
            android:text="@string/plazas_libres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarPlazas"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPlazas"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:text="@string/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BuscarPrecio"
            android:layout_weight="0.25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrecio"
            android:layout_weight="1.14" />
    </LinearLayout>

</LinearLayout>