<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.migel.proyectointegrador2dambueno.Registrar"
    android:background="@color/primary_light">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etRegEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:padding="20dp"
        android:hint="@string/usuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRegContra"
        android:hint="@string/contraseña"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etRegEmail"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:padding="20dp" />

    </LinearLayout>

    <Button
        android:text="@string/registrar"
        android:id="@+id/registrar"
        style="@style/myButton"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"

        android:layout_marginRight="0dp"
        android:onClick="registrarReg" />

    <TextView
        android:text="@string/eslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eslogan"
        android:textSize="20sp"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titulo"
        android:textSize="60sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="false"
        android:fontFamily="cursive"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
