<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.migel.proyectointegrador2dambueno.MainActivity$PlaceholderFragment"
    android:background="@android:color/white">

    <TextView
        android:text="@string/lug_salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/section_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="24dp"
        android:id="@+id/salida" />

    <TextView
        android:text="@string/lug_llegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salida"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destino"
        android:entries="@array/destinos"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:id="@+id/publicarViaje"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/etPrecio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Precio"
        android:layout_below="@+id/plazas"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etPrecio"
        android:layout_alignBaseline="@+id/Precio"
        android:layout_alignBottom="@+id/Precio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbno"
        android:id="@+id/radiogroup"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/destino"
        android:layout_toLeftOf="@+id/publicarViaje"
        android:layout_toStartOf="@+id/publicarViaje">

        <RadioButton
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbno"
            android:layout_weight="1"
            android:layout_alignTop="@+id/radiogroup"
            android:layout_toRightOf="@+id/plazas"
            android:layout_toEndOf="@+id/plazas" />

        <RadioButton
            android:text="@string/si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbsi"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/plazas_libres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/plazas"
        android:id="@+id/plazas"
        android:spinnerMode="dialog"
        android:dropDownWidth="match_parent"
        android:gravity="center_vertical|center_horizontal|center"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/radiogroup"
        android:layout_alignStart="@+id/radiogroup" />

    <TextView
        android:text="@string/fumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fumador"
        android:layout_marginBottom="18dp"
        android:layout_alignBottom="@+id/radiogroup"
        android:layout_toLeftOf="@+id/salida"
        android:layout_toStartOf="@+id/salida" />

</RelativeLayout>
